--- a/my-workspace/package.json
+++ b/my-workspace/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "lint:fix": "prettier --write . && ng lint --fix"
+    "lint:fix": "prettier --write . && ng lint --fix",
+    "prettier": "prettier --write . "
   },
   "private": true,
   "dependencies": {
